--- a/conf/machine/ec401w.conf
+++ b/conf/machine/ec401w.conf
@@ -18,17 +18,12 @@ MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-ec401w.dtb"
 
+UBOOT_MACHINE = "mx7ulp_ec401w_defconfig"
+PREFERRED_PROVIDER_u-boot_ec401w = "u-boot-pingu"
+PREFERRED_PROVIDER_virtual/bootloader_ec401w = "u-boot-pingu"
+PREFERRED_RPROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
+PREFERRED_PROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
 UBOOT_MAKE_TARGET = "u-boot.imx"
-UBOOT_SUFFIX = "imx"
-
-UBOOT_CONFIG ??= " \
-    sd \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', '', d)} \
-"
-UBOOT_CONFIG[sd]       = "mx7ulp_evk_config,sdcard"
-UBOOT_CONFIG[sd-optee] = "mx7ulp_evk_optee_config,sdcard"
-UBOOT_CONFIG[emmc]     = "mx7ulp_evk_emmc_config,sdcard"
-UBOOT_CONFIG[mfgtool]  = "mx7ulp_evk_config"
 
 IMAGE_INSTALL_remove = "packagegroup-flir-gstreamer"
 DISTRO_FEATURES_remove = "wayland alsa pulseaudio"
