[BC-118] galcore module for ec201 for Weston/g2d
Select to build the external galcore driver. Kernel patch
needed to enable this module to build with newer GCC.

--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -37,6 +37,8 @@ MACHINE_SOCARCH_SUFFIX = "-mx7ulp"
 MACHINE_SOCARCH_FILTER_append_mx7ulp = "virtual/libopenvg virtual/libgles1 virtual/libgles2 virtual/egl virtual/mesa virtual/libgl virtual/libg2d"
 IMX_DEFAULT_KERNEL_mx7ulp = "linux-imx"
 
+# We want the external galcore module, see fsl-vivante-kernel-driver-handler.bbclass
+MACHINE_USES_VIVANTE_KERNEL_DRIVER_MODULE = '1'
 
 # Set Serial console
 SERIAL_CONSOLES = "115200;ttyLP0"
