[ES-2214] Enable building with PREMIRROR only
* Point to updated PREMIRROR URL in line with Jenkins job
  http://se-arn-ci022:8080/view/Yocto/job/Yocto_premirror_update_y3/

* Remove use of tags in recipes to allow builds to use PREMIRROR
  only without checking status with upstream server

--- a/conf/distro/flir-wayland.conf
+++ b/conf/distro/flir-wayland.conf
@@ -79,7 +79,11 @@ DEFAULT_TIMEZONE = "Europe/Paris"
 #use no prefix or we will get conflicting _ in kernel module name
 KERNEL_MODULE_PACKAGE_SUFFIX = ""
 
-PREMIRRORS ??= "\
+# Set up pointers to our own premirror and to Yocto project mirrors
+MIRRORS =+ "\
+ftp://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
+http://.*/.*  http://downloads.yoctoproject.org/mirror/sources/ \n \
+https://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \n \
 bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
@@ -89,14 +93,10 @@ osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
-MIRRORS =+ "\
-ftp://.*/.*      http://downloads.yoctoproject.org/mirror/sources/ \n \
-http://.*/.*     http://downloads.yoctoproject.org/mirror/sources/ \n \
-https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
-
 INHERIT += "own-mirrors"
-SOURCE_MIRROR_URL ?= "http://se-arn-dev5/yocto-flirmirror/dl/"
+SOURCE_MIRROR_URL ?= "http://se-arn-dev5/yocto-flirmirror/y3-premirror/"
 
+SSTATE_MIRRORS ?= "file://.* http://se-arn-dev5/yocto-flirmirror/sstate_yocto3.0/${MACHINE}/PATH"
 
 # The CONNECTIVITY_CHECK_URI's are used to test whether we can succesfully
 # fetch from the network (and warn you if not). To disable the test set
