--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -10,6 +10,10 @@ require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel_ec201 = "linux-pingu"
+PREFERRED_VERSION_linux-pingu = "4.14%"
+PREFERRED_VERSION_linux-imx-headers = "4.14%"
+PREFERRED_VERSION_linux-libc-headers_imx = "4.14%"
+PREFERRED_VERSION_nativesdk-linux-libc-headers ?= "4.14%"
 
 MACHINE_EXTRA_RRECOMMENDS_remove = "kernel-module-nxp89xx linux-firmware-nxp89xx"
 MACHINE_FEATURES += "wifi bluetooth"
