--- a/recipes-flir/skylab/files/skylab-cmd.service
+++ b/recipes-flir/skylab/files/skylab-cmd.service
@@ -4,10 +4,7 @@ After=network-online.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/skylab-cmd \
-			      --verbosity=3 \
-			      --client-bind-endpoint=tcp://*:5551 \
-				  --fileio-bind-endpoint=tcp://*:5552
+ExecStart=/usr/bin/skylab-cmd
 Restart=on-failure
 
 [Install]
