--- a/recipes-flir/skylab/files/skylab-streamserver.service
+++ b/recipes-flir/skylab/files/skylab-streamserver.service
@@ -5,9 +5,7 @@ After=network-online.target
 [Service]
 Type=dbus
 BusName=com.flir.skylab1.streamserver
-ExecStart=/usr/bin/skylab-streamserver \
-				       --verbosity=3 \
-				       --frames-bind-endpoint=tcp://*:5550
+ExecStart=/usr/bin/skylab-streamserver
 Restart=on-failure
 
 [Install]
