HABA-446: BLE discovery with advserver
* advserver is installed in /usr/sbin.
  /sbin/ble-discovery.sh just exec's advserver with the arguments
  hci device name, camera type, firmware version (major, minor1, minor2),
  and tx power.
* Added "Restart=on-failure" in ble-discovery.service so advserver
  restarts if it exits with a non-zero status.  See man page
  systemd.service(5) how it handle signals, i.e. some will not restart it.
* /etc/skylab directory now installed by recipe.

--- a/recipes-connectivity/ble-discovery/files/ble-discovery.service
+++ b/recipes-connectivity/ble-discovery/files/ble-discovery.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=BLE discovery by advertising SSID and (currently faked) camserial
+Description=BLE discovery: started advserver daemon
 After=bluetooth.service
 
 [Service]
-Type=oneshot
-ExecStart=/sbin/ble-discovery.sh on
+Type=simple
+ExecStart=/sbin/ble-discovery.sh
+Restart=on-failure
 
 [Install]
 WantedBy=bluetooth.target
