wpa_supplicant will be restarted if it dies
* ec401w: added "Restart=on-failure" to wpa_supplicant.service

--- a/recipes-connectivity/wpa-supplicant/wpa-supplicant/ec401w/wpa_supplicant.service
+++ b/recipes-connectivity/wpa-supplicant/wpa-supplicant/ec401w/wpa_supplicant.service
@@ -8,6 +8,7 @@ Wants=network.target
 Type=dbus
 BusName=fi.w1.wpa_supplicant1
 ExecStart=/usr/sbin/wpa_supplicant -u -c /etc/wpa_supplicant.conf -iwlan0 -D nl80211
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
