--- a/recipes-flir/skylab/files/skylab-cmd.service
+++ b/recipes-flir/skylab/files/skylab-cmd.service
@@ -6,6 +6,7 @@ After=network-online.target
 Type=simple
 ExecStart=/usr/bin/skylab-cmd
 Restart=on-failure
+Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
 
 [Install]
 WantedBy=multi-user.target
