[HABA-267] ec401w: Reordered systemd services
* Reordered systemd services to optimize boot time.
* Removed delays in btload, as it is in the critical systemd chain.
* Removed ipv6
* Disabled systemd-resolved and systemd-timesyncd

--- a/conf/machine/ec401w.conf
+++ b/conf/machine/ec401w.conf
@@ -26,7 +26,7 @@ PREFERRED_PROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
 UBOOT_MAKE_TARGET = "u-boot.imx"
 
 IMAGE_INSTALL_remove = "packagegroup-flir-gstreamer"
-DISTRO_FEATURES_remove = "wayland alsa pulseaudio"
+DISTRO_FEATURES_remove = "wayland alsa pulseaudio ipv6"
 
 IMX_DEFAULT_KERNEL_mx7ulp = "linux-imx"
 
