EOWYN-2853 Add firmware-imx-vpu-imx6q to rootfs for eoco.

--- a/conf/machine/eoco.conf
+++ b/conf/machine/eoco.conf
@@ -54,8 +54,8 @@ UBOOT_ENTRYPOINT = "0x10800000"
 MACHINE_FIRMWARE ?= ""
 # Do not include epdc firmware for electronic ink display controller (saves ~4M)
 MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
-# FIXME: Uncomment this?
-#MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx6q"
+
+MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx6q"
 
 MACHINE_EXTRA_RDEPENDS += " \
     e2fsprogs \
