[HABA-405] ec401w: Removed GPLv3 packages
* Reverted packages to corresponding GPLv2 versions
* Removed GPLv3 packages
* INCOMPATIBLE_LICENSE doesn't seem to be deterministic, so
  PREFERRED_VERSION is used to force ec401w to choose GPLv2 versions.

--- a/conf/machine/ec401w.conf
+++ b/conf/machine/ec401w.conf
@@ -34,3 +34,23 @@ IMX_DEFAULT_KERNEL_mx7ulp = "linux-imx"
 SERIAL_CONSOLES = "115200;ttyLP0"
 
 IMAGE_FSTYPES = "tar.gz ext4"
+
+# Packages to use GPLv2
+INCOMPATIBLE_LICENSE_bash = "*GPLv3"
+INCOMPATIBLE_LICENSE_cpio = "*GPLv3"
+INCOMPATIBLE_LICENSE_dosfstools = "*GPLv3"
+INCOMPATIBLE_LICENSE_gmp = "*GPLv3"
+INCOMPATIBLE_LICENSE_gnutls = "*GPLv3"
+INCOMPATIBLE_LICENSE_nettle = "*GPLv3"
+INCOMPATIBLE_LICENSE_readline = "*GPLv3"
+INCOMPATIBLE_LICENSE_screen = "*GPLv3"
+
+# For some reason INCOMPATIBLE_LICENSE is ignored, so we use PREFERRED_VERSION
+PREFERRED_VERSION_bash = "3.2.57"
+PREFERRED_VERSION_cpio = "2.8"
+PREFERRED_VERSION_dosfstools = "2.11"
+PREFERRED_VERSION_gmp = "4.2.1"
+PREFERRED_VERSION_gnutls = "3.3.30"
+PREFERRED_VERSION_nettle = "2.7.1"
+PREFERRED_VERSION_readline = "5.2"
+PREFERRED_VERSION_screen = "4.0.3"
