skylab: HABA-649 Add systemd-failure-notifier
Add notifier to generate dump event if failure

--- a/recipes-flir/skylab/files/skylab-cosw-adapter.service
+++ b/recipes-flir/skylab/files/skylab-cosw-adapter.service
@@ -7,6 +7,7 @@ Type=simple
 ExecStart=/usr/bin/skylab-cosw-adapter
 Restart=on-failure
 Environment=LD_LIBRARY_PATH=/FLIR/usr/lib
+ExecStopPost=/sbin/systemd-failure-notifier "%n" "%i"
 
 [Install]
 WantedBy=multi-user.target
