factorydefault: cleanup startup if factorydefault ec401w
If we should do factorydefault, it is included in cmdline.

Check if it is included before starting services for wlanload,
ble-discovery and skylab. To stop app from discovering camera, and
leds from blinking.

--- a/recipes-connectivity/wlanload/files/ec401w/wlanload.service
+++ b/recipes-connectivity/wlanload/files/ec401w/wlanload.service
@@ -6,6 +6,7 @@ After=wpa_supplicant.service
 Type=forking
 # SIGINT doesn't leave the service in failed state
 KillSignal=SIGINT
+ExecCondition=/bin/bash -c '! grep -q "factorydefault" /proc/cmdline'
 ExecStartPre=-/sbin/wlanload
 ExecStart=/usr/sbin/udhcpd -I192.168.87.1
 
