--- a/recipes-connectivity/ble-discovery/files/ble-discovery.service
+++ b/recipes-connectivity/ble-discovery/files/ble-discovery.service
@@ -4,6 +4,7 @@ After=bluetooth.service
 
 [Service]
 Type=simple
+ExecCondition=/bin/bash -c '! grep -q "factorydefault" /proc/cmdline'
 ExecStart=/sbin/ble-discovery.sh
 Restart=on-failure
 
