--- a/recipes-graphics/wayland/files/eoco/weston.service
+++ b/recipes-graphics/wayland/files/eoco/weston.service
@@ -45,7 +45,7 @@ ExecStartPre=/bin/bash -c 'fbset -fb /dev/fb1 -g 640 480 640 480 32'
 ExecStartPre=/bin/bash -c '/bin/echo 0 > /sys/devices/platform/fb@0/graphics/fb1/blank'
 ExecStartPre=/bin/bash -c '/bin/echo 0 > /sys/devices/platform/fb@1/graphics/fb2/blank'
 ExecStartPre=/bin/bash -c '/bin/echo 0 > /sys/devices/platform/fb@2/graphics/fb3/blank'
-ExecStart=/usr/bin/weston --log=${XDG_RUNTIME_DIR}/weston.log --modules=systemd-notify.so --device=/dev/fb0,/dev/fb1 --local-alpha-device=/dev/fb1 --clone-from=/dev/fb0 --clone-to=/dev/fb2,/dev/fb3
+ExecStart=/usr/bin/weston --log=${XDG_RUNTIME_DIR}/weston.log --modules=systemd-notify.so --device=/dev/fb0,/dev/fb1 --local-alpha-device=/dev/fb1 --clone-descr=/dev/fb0,/dev/fb2,/dev/fb3;/dev/fb1 --counter-rotate-clones=1
 
 # Optional watchdog setup
 TimeoutStartSec=60
