ec302: Update kernel version to 5.10

--- a/conf/machine/ec302.conf
+++ b/conf/machine/ec302.conf
@@ -8,14 +8,12 @@ require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel_ec302 = "linux-pingu"
-PREFERRED_VERSION_linux-pingu = "4.14%"
-PREFERRED_VERSION_linux-imx-headers = "4.14%"
-PREFERRED_VERSION_linux-libc-headers_imx = "4.14%"
-PREFERRED_VERSION_nativesdk-linux-libc-headers ?= "4.14%"
+PREFERRED_VERSION_linux-pingu = "5.10%"
+KERNEL_IMAGETYPE = "zImage"
 
 KERNEL_DEVICETREE += "imx7ulp-ec302.dtb"
 
-UBOOT_MACHINE = "mx7ulp_ec401w_defconfig"
+UBOOT_MACHINE = "mx7ulp_ec302_defconfig"
 PREFERRED_PROVIDER_u-boot_ec302 = "u-boot-pingu"
 PREFERRED_PROVIDER_virtual/bootloader_ec302 = "u-boot-pingu"
 PREFERRED_RPROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
