--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -22,20 +22,12 @@ KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
 KERNEL_DEVICETREE += "imx7ulp-sherlock-b.dtb"
 
-#UBOOT_CONFIG ??= "ec201"
-#UBOOT_CONFIG[ec201] = "mx7ulp_ec201_config"
-
+UBOOT_MACHINE = "mx7ulp_ec201_defconfig"
+PREFERRED_PROVIDER_u-boot_ec201 = "u-boot-pingu"
+PREFERRED_PROVIDER_virtual/bootloader_ec201 = "u-boot-pingu"
+PREFERRED_RPROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
+PREFERRED_PROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
 UBOOT_MAKE_TARGET = "u-boot.imx"
-UBOOT_SUFFIX = "imx"
-
-UBOOT_CONFIG ??= " \
-    sd \
-    ${@bb.utils.contains('MACHINE_FEATURES', 'optee', 'sd-optee', '', d)} \
-"
-UBOOT_CONFIG[sd]       = "mx7ulp_evk_config,sdcard"
-UBOOT_CONFIG[sd-optee] = "mx7ulp_evk_optee_config,sdcard"
-UBOOT_CONFIG[emmc]     = "mx7ulp_evk_emmc_config,sdcard"
-UBOOT_CONFIG[mfgtool]  = "mx7ulp_evk_config"
 
 MACHINE_SOCARCH_SUFFIX = "-mx7ulp"
 MACHINE_SOCARCH_FILTER_append_mx7ulp = "virtual/libopenvg virtual/libgles1 virtual/libgles2 virtual/egl virtual/mesa virtual/libgl virtual/libg2d"
