se-arn-dev5: extended with .zone2.flir.net [ES-2421] (yocto 3.3)
This is necessary for builds to work in updated IT environment

--- a/conf/site.conf
+++ b/conf/site.conf
@@ -28,9 +28,9 @@ p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
 INHERIT += "own-mirrors"
-SOURCE_MIRROR_URL ?= "http://se-arn-dev5/yocto-flirmirror/y3-premirror/"
+SOURCE_MIRROR_URL ?= "http://se-arn-dev5.zone2.flir.net/yocto-flirmirror/y3-premirror/"
 
-SSTATE_MIRRORS ?= "file://.* http://se-arn-dev5/yocto-flirmirror/sstate_yocto${SDK_VERSION}/${MACHINE}/sstate-cache/PATH;downloadfilename=PATH"
+SSTATE_MIRRORS ?= "file://.* http://se-arn-dev5.zone2.flir.net/yocto-flirmirror/sstate_yocto${SDK_VERSION}/${MACHINE}/sstate-cache/PATH;downloadfilename=PATH"
 
 # The CONNECTIVITY_CHECK_URI's are used to test whether we can succesfully
 # fetch from the network (and warn you if not). To disable the test set
