se-arn-dev5: extended with .zone2.flir.net [ES-2421] (yocto 2.5)
This is necessary for builds to work in updated IT environment

--- a/conf/distro/flir.conf
+++ b/conf/distro/flir.conf
@@ -93,7 +93,7 @@ http://.*/.*     http://downloads.yoctoproject.org/mirror/sources/ \n \
 https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
 
 INHERIT += "own-mirrors"
-SOURCE_MIRROR_URL ?= "http://se-arn-dev5/yocto-flirmirror/dl/"
+SOURCE_MIRROR_URL ?= "http://se-arn-dev5.zone2.flir.net/yocto-flirmirror/dl/"
 
 
 # The CONNECTIVITY_CHECK_URI's are used to test whether we can succesfully
