--- a/recipes-flir/appcore/files/ec302/flirapp.conf
+++ b/recipes-flir/appcore/files/ec302/flirapp.conf
@@ -2,5 +2,6 @@
 After=connman.service systemd-journald.service progressapp.service videorender.service
 
 [Service]
+ExecStartPre=/bin/bash -c '/sbin/modprobe okeanos'
 Environment=QT_QPA_EGLFS_FB=/dev/fb0
 Environment=QT_LOGGING_RULES=qt.qml.connections=false
