oommon as simple systemd service [BC-339]
Previously used "Type=oneshot"
oneshot should only be used on scripts that terminates
oommon continues to run (until terminated) and should better be
a "simple" service for to not hang "systemctl start oommon"

--- a/recipes-flir/oommon/files/oommon.service
+++ b/recipes-flir/oommon/files/oommon.service
@@ -4,7 +4,7 @@ DefaultDependencies=no
 After=flirapp.service
 
 [Service]
-Type=oneshot
+Type=simple
 RemainAfterExit=yes
 ExecStart=/usr/sbin/monitor-oom.sh
 
