ec201: change kernel-version to 5.10
For now, use ec302 dts.

--- a/conf/machine/ec201.conf
+++ b/conf/machine/ec201.conf
@@ -10,17 +10,13 @@ require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel_ec201 = "linux-pingu"
-PREFERRED_VERSION_linux-pingu = "4.14%"
-PREFERRED_VERSION_linux-imx-headers = "4.14%"
-PREFERRED_VERSION_linux-libc-headers_imx = "4.14%"
-PREFERRED_VERSION_nativesdk-linux-libc-headers ?= "4.14%"
+PREFERRED_VERSION_linux-pingu = "5.10%"
+KERNEL_IMAGETYPE = "zImage"
 
 MACHINE_EXTRA_RRECOMMENDS_remove = "kernel-module-nxp89xx linux-firmware-nxp89xx"
 MACHINE_FEATURES += "wifi bluetooth"
 
 KERNEL_DEVICETREE += "imx7ulp-sherlock.dtb"
-KERNEL_DEVICETREE += "imx7ulp-sherlock-a.dtb"
-KERNEL_DEVICETREE += "imx7ulp-sherlock-b.dtb"
 
 UBOOT_MACHINE = "mx7ulp_ec201_defconfig"
 PREFERRED_PROVIDER_u-boot_ec201 = "u-boot-pingu"
