ec501: Setup u-boot-script and fw utils
Add libubootenv, u-boot-default-env and u-boot-script
to image. Enable u-boot-pingu for ec501.

[BC-338]

--- a/conf/machine/ec501.conf
+++ b/conf/machine/ec501.conf
@@ -1,5 +1,5 @@
 #@TYPE: Machine
-#@NAME: Flir Systems Evander Board
+#@NAME: Flir Systems Bellatrix Board
 #@SOC: i.MX6DL
 #@DESCRIPTION: Machine configuration for Flir Systems EC501 Board
 
@@ -10,9 +10,13 @@ SERIAL_CONSOLES = "115200;ttymxc0"
 
 MACHINEOVERRIDES =. "mx6:mx6dl:"
 
-# FIXME: Switch over to our own u-boot-pingu later on...
-#PREFERRED_PROVIDER_u-boot = "u-boot-pingu"
-#PREFERRED_PROVIDER_virtual/bootloader = "u-boot-pingu"
+UBOOT_MACHINE = "flir_ec501_config"
+PREFERRED_PROVIDER_u-boot_ec501 = "u-boot-pingu"
+PREFERRED_PROVIDER_virtual/bootloader_ec501 = "u-boot-pingu"
+PREFERRED_RPROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
+PREFERRED_PROVIDER_u-boot-default-env = "u-boot-imx-mfgtool"
+UBOOT_MAKE_TARGET = "u-boot.imx"
+UBOOT_MAKE_TARGET_pn-u-boot-pingu = "u-boot.imx"
 
 #PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-fw-utils-pingu"
 
@@ -26,7 +30,6 @@ SOC_FAMILY = "mx6:mx6dl"
 # Platform u-boot settings
 UBOOT_ENTRYPOINT = "0x10800000"
 UBOOT_SUFFIX = "imx"
-UBOOT_MACHINE ?= "ec501_config"
 
 # Firmware
 MACHINE_FIRMWARE ?= ""
