--- a/recipes-flir/haproxy/files/haproxy.cfg
+++ b/recipes-flir/haproxy/files/haproxy.cfg
@@ -15,18 +15,27 @@ backend api_backend
     timeout connect 6000
     server apiserver 127.0.0.1:8082 weight 1 maxconn 1024 check
 
+backend mist_backend
+    balance roundrobin
+    timeout server 30000
+    timeout connect 4000
+    server apiserver 127.0.0.1:14011 weight 1 maxconn 1024 check
+
 backend mjpg_backend
     balance roundrobin
+    timeout server 30000
     timeout connect 4000
     server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
 
 backend avc_backend
     balance roundrobin
+    timeout server 30000
     timeout connect 4000
     server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
 
 backend mpeg4_backend
     balance roundrobin
+    timeout server 30000
     timeout connect 4000
     server apiserver 127.0.0.1:14012 weight 1 maxconn 1024 check
 
