--- a/recipes-flir/haproxy/files/haproxy_https.cfg
+++ b/recipes-flir/haproxy/files/haproxy_https.cfg
@@ -4,6 +4,7 @@ frontend ssl
     default_backend www_backend
     acl is_websocket hdr(Upgrade) -i WebSocket
     acl is_websocket hdr_beg(Host) -i ws
+    acl is_mist path_beg -i /mist
     acl is_mjpg path_beg -i /mjpg
     acl is_avc path_beg -i /avc
     acl is_mpeg4 path_beg -i /mpeg4
@@ -12,6 +13,7 @@ frontend ssl
     acl is_api path_beg -i /api/
     use_backend api_backend if is_api
     use_backend socket_backend if is_websocket
+    use_backend mist_backend if is_mist
     use_backend mjpg_backend if is_mjpg
     use_backend avc_backend if is_avc
     use_backend mpeg4_backend if is_mpeg4
