AGATHA-211: Run btload and gadget later to boot faster.

--- a/recipes-connectivity/btload/files/ec302/btload.service
+++ b/recipes-connectivity/btload/files/ec302/btload.service
@@ -2,6 +2,7 @@
 Description=Bluetooth loader
 After=connman.service dbus.service
 Before=bluetooth.service dbus-org.bluez.service
+After=flirapp.service
 
 [Service]
 Type=oneshot
