galcore: Vivante GPU driver as module
GPU config sometimes fails when the Vivante driver is a builtin
module. E.g., model register may report invalid data. Loading the
module later eliminates the problem.

[BC-417]

--- a/conf/machine/evco.conf
+++ b/conf/machine/evco.conf
@@ -93,4 +93,7 @@ BBFILE_PATTERN_digi-arm = ""
 BBFILE_PATTERN_dey = ""
 BBFILE_PATTERN_fsl-demos = ""
 
+# We want the external galcore module, see fsl-vivante-kernel-driver-handler.bbclass
+MACHINE_USES_VIVANTE_KERNEL_DRIVER_MODULE = '1'
+
 IMAGE_FSTYPES = "tar.gz ext4"
