AGATHA-671, AGATHA-708: Fix charging and systemd issues.
Signed-off-by: Anton Persson <anton.persson@teledyneflir.com>

--- a/recipes-connectivity/gadgetload/files/ec302/gadget.service
+++ b/recipes-connectivity/gadgetload/files/ec302/gadget.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Configure gadget on usb0
-Before=network.target
+After=flirapp.service
 
 [Service]
 Type=oneshot
@@ -9,4 +9,4 @@ ExecStop=/sbin/gadget.sh unload
 RemainAfterExit=yes
 
 [Install]
-WantedBy=multi-user.target charge.target
+WantedBy=graphical.target
