evco: reduce cpu speed well after flirapp start [BC-442]
cpu speed is/was reduced for evco based platforms
original motivation is to limit temperature raise in a consistent way, i.e.
always the same behavior regardless of current operating temperature

(we need to wait ~24s (experimental) after flirapp start until flirapp
 is fully booted -> 30s)

--- a/recipes-flir/appcore/files/evco/flirapp.conf
+++ b/recipes-flir/appcore/files/evco/flirapp.conf
@@ -2,5 +2,5 @@
 [Service]
 Environment=QT_QPA_EGLFS_FB=/dev/fb2
 Environment=QT_LOGGING_RULES=qt.qml.connections=false
-ExecStartPost=/bin/bash -c 'echo 800000 > /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq'
+ExecStartPost=/bin/bash -c '/usr/sbin/flirapp_reduce_speed.sh &'
 ExecStopPost=/bin/dd if=/dev/zero of=/dev/fb0 count=4800
